--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
       <p>
         <a class="cta" href="#">Download Excursion (Coming soon!)</a>
       </p>
+      <video autoplay loop muted>
+        <source src="resources/videos/excursion.mp4" type="video/mp4" />
+        /> Video is not supported!
+      </video>
+
+      <h2>Your personal travel guide</h2>
+      <p>
+        Excursion remembers places you like, and recommends new points of
+        interest around you.
+      </p>
+
+      <p>
+        <img src="resources/images/camp.jpg" alt="" />
+      </p>
+      <p>
+        <img src="resources/images/phone.png" alt="" />
+      </p>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p>
+        <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+      </p>
     </header>
   </body>
 </html>
